# tgbot

./: Dockerfile  main.py  pyproject.toml  requirements.txt
